fix(backend): fix issues reported by sonar, remove classes creation dates and times in comments
Dates and times sometimes were wrong e.g. when copy/pasted or manually written. Anyway, history is available both in intellij and git.